syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec Compst
    7       | Specifier FunDec SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 Compst: LC DefList StmtList RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | Compst
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt

   33 DefList: Def DefList
   34        | %empty

   35 Def: Specifier DecList SEMI

   36 DecList: Dec
   37        | Dec COMMA DecList

   38 Dec: VarDec
   39    | VarDec ASSIGNOP Exp

   40 Exp: Exp ASSIGNOP Exp
   41    | Exp AND Exp
   42    | Exp OR Exp
   43    | Exp RELOP Exp
   44    | Exp PLUS Exp
   45    | Exp MINUS Exp
   46    | Exp STAR Exp
   47    | Exp DIV Exp
   48    | LP Exp RP
   49    | MINUS Exp
   50    | NOT Exp
   51    | ID LP Args RP
   52    | ID LP RP
   53    | Exp LB Exp RB
   54    | ID DOT ID
   55    | ID
   56    | INT
   57    | FLOAT

   58 Args: Exp COMMA Args
   59     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 18 56
FLOAT (259) 57
ID (260) 14 16 17 19 20 51 52 54 55
SEMI (261) 4 5 7 27 29 35
COMMA (262) 9 21 37 58
ASSIGNOP (263) 39 40
RELOP (264) 43
PLUS (265) 44
MINUS (266) 45 49
STAR (267) 46
DIV (268) 47
AND (269) 41
OR (270) 42
DOT (271) 54
NOT (272) 50
TYPE (273) 10
LP (274) 19 20 30 31 32 48 51 52
RP (275) 19 20 30 31 32 48 51 52
LB (276) 18 53
RB (277) 18 53
LC (278) 12 24
RC (279) 12 24
STRUCT (280) 12 13
RETURN (281) 29
IF (282) 30 31
ELSE (283) 31
WHILE (284) 32
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 2
ExtDef (34)
    左： 4 5 6 7, 右： 2
ExtDecList (35)
    左： 8 9, 右： 4 9
Specifier (36)
    左： 10 11, 右： 4 5 6 7 23 35
StructSpecifier (37)
    左： 12 13, 右： 11
OptTag (38)
    左： 14 15, 右： 12
Tag (39)
    左： 16, 右： 13
VarDec (40)
    左： 17 18, 右： 8 9 18 23 38 39
FunDec (41)
    左： 19 20, 右： 6 7
VarList (42)
    左： 21 22, 右： 19 21
ParamDec (43)
    左： 23, 右： 21 22
Compst (44)
    左： 24, 右： 6 28
StmtList (45)
    左： 25 26, 右： 24 25
Stmt (46)
    左： 27 28 29 30 31 32, 右： 25 30 31 32
DefList (47)
    左： 33 34, 右： 12 24 33
Def (48)
    左： 35, 右： 33
DecList (49)
    左： 36 37, 右： 35 37
Dec (50)
    左： 38 39, 右： 36 37
Exp (51)
    左： 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57, 右：
    27 29 30 31 32 39 40 41 42 43 44 45 46 47 48 49 50 53 58 59
Args (52)
    左： 58 59, 右： 51 58


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec Compst
    7       | Specifier . FunDec SEMI

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  转到状态 15
    VarDec      转到状态 16
    FunDec      转到状态 17


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 17 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 8 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . Compst
    7       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 23
    LC    shift, and go to state 24

    Compst  转到状态 25


State 18

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 34 (DefList)

    Specifier        转到状态 26
    StructSpecifier  转到状态 7
    DefList          转到状态 27
    Def              转到状态 28


State 19

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 29
    STRUCT  shift, and go to state 2

    Specifier        转到状态 30
    StructSpecifier  转到状态 7
    VarList          转到状态 31
    ParamDec         转到状态 32


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 33

    ExtDecList  转到状态 34
    VarDec      转到状态 16


State 22

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 35


State 23

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 24

   24 Compst: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 34 (DefList)

    Specifier        转到状态 26
    StructSpecifier  转到状态 7
    DefList          转到状态 36
    Def              转到状态 28


State 25

    6 ExtDef: Specifier FunDec Compst .

    $default  reduce using rule 6 (ExtDef)


State 26

   35 Def: Specifier . DecList SEMI

    ID  shift, and go to state 33

    VarDec   转到状态 37
    DecList  转到状态 38
    Dec      转到状态 39


State 27

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 40


State 28

   33 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 34 (DefList)

    Specifier        转到状态 26
    StructSpecifier  转到状态 7
    DefList          转到状态 41
    Def              转到状态 28


State 29

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 30

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 33

    VarDec  转到状态 42


State 31

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 43


State 32

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 44

    $default  reduce using rule 22 (VarList)


State 33

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 34

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 35

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 45


State 36

   24 Compst: LC DefList . StmtList RC

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    ID      shift, and go to state 48
    MINUS   shift, and go to state 49
    NOT     shift, and go to state 50
    LP      shift, and go to state 51
    LC      shift, and go to state 24
    RETURN  shift, and go to state 52
    IF      shift, and go to state 53
    WHILE   shift, and go to state 54

    $default  reduce using rule 26 (StmtList)

    Compst    转到状态 55
    StmtList  转到状态 56
    Stmt      转到状态 57
    Exp       转到状态 58


State 37

   18 VarDec: VarDec . LB INT RB
   38 Dec: VarDec .
   39    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 59
    LB        shift, and go to state 22

    $default  reduce using rule 38 (Dec)


State 38

   35 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 60


State 39

   36 DecList: Dec .
   37        | Dec . COMMA DecList

    COMMA  shift, and go to state 61

    $default  reduce using rule 36 (DecList)


State 40

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 41

   33 DefList: Def DefList .

    $default  reduce using rule 33 (DefList)


State 42

   18 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 23 (ParamDec)


State 43

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 44

   21 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        转到状态 30
    StructSpecifier  转到状态 7
    VarList          转到状态 62
    ParamDec         转到状态 32


State 45

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 46

   56 Exp: INT .

    $default  reduce using rule 56 (Exp)


State 47

   57 Exp: FLOAT .

    $default  reduce using rule 57 (Exp)


State 48

   51 Exp: ID . LP Args RP
   52    | ID . LP RP
   54    | ID . DOT ID
   55    | ID .

    DOT  shift, and go to state 63
    LP   shift, and go to state 64

    $default  reduce using rule 55 (Exp)


State 49

   49 Exp: MINUS . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 65


State 50

   50 Exp: NOT . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 66


State 51

   48 Exp: LP . Exp RP

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 67


State 52

   29 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 68


State 53

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 69


State 54

   32 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 70


State 55

   28 Stmt: Compst .

    $default  reduce using rule 28 (Stmt)


State 56

   24 Compst: LC DefList StmtList . RC

    RC  shift, and go to state 71


State 57

   25 StmtList: Stmt . StmtList

    INT     shift, and go to state 46
    FLOAT   shift, and go to state 47
    ID      shift, and go to state 48
    MINUS   shift, and go to state 49
    NOT     shift, and go to state 50
    LP      shift, and go to state 51
    LC      shift, and go to state 24
    RETURN  shift, and go to state 52
    IF      shift, and go to state 53
    WHILE   shift, and go to state 54

    $default  reduce using rule 26 (StmtList)

    Compst    转到状态 55
    StmtList  转到状态 72
    Stmt      转到状态 57
    Exp       转到状态 58


State 58

   27 Stmt: Exp . SEMI
   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   53    | Exp . LB Exp RB

    SEMI      shift, and go to state 73
    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    LB        shift, and go to state 82


State 59

   39 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 83


State 60

   35 Def: Specifier DecList SEMI .

    $default  reduce using rule 35 (Def)


State 61

   37 DecList: Dec COMMA . DecList

    ID  shift, and go to state 33

    VarDec   转到状态 37
    DecList  转到状态 84
    Dec      转到状态 39


State 62

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


State 63

   54 Exp: ID DOT . ID

    ID  shift, and go to state 85


State 64

   51 Exp: ID LP . Args RP
   52    | ID LP . RP

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51
    RP     shift, and go to state 86

    Exp   转到状态 87
    Args  转到状态 88


State 65

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   49    | MINUS Exp .
   53    | Exp . LB Exp RB

    STAR  shift, and go to state 78
    DIV   shift, and go to state 79
    LB    shift, and go to state 82

    $default  reduce using rule 49 (Exp)


State 66

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   50    | NOT Exp .
   53    | Exp . LB Exp RB

    LB  shift, and go to state 82

    $default  reduce using rule 50 (Exp)


State 67

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   48    | LP Exp . RP
   53    | Exp . LB Exp RB

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    RP        shift, and go to state 89
    LB        shift, and go to state 82


State 68

   29 Stmt: RETURN Exp . SEMI
   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   53    | Exp . LB Exp RB

    SEMI      shift, and go to state 90
    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    LB        shift, and go to state 82


State 69

   30 Stmt: IF LP . Exp RP Stmt
   31     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 91


State 70

   32 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 92


State 71

   24 Compst: LC DefList StmtList RC .

    $default  reduce using rule 24 (Compst)


State 72

   25 StmtList: Stmt StmtList .

    $default  reduce using rule 25 (StmtList)


State 73

   27 Stmt: Exp SEMI .

    $default  reduce using rule 27 (Stmt)


State 74

   40 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 93


State 75

   43 Exp: Exp RELOP . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 94


State 76

   44 Exp: Exp PLUS . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 95


State 77

   45 Exp: Exp MINUS . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 96


State 78

   46 Exp: Exp STAR . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 97


State 79

   47 Exp: Exp DIV . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 98


State 80

   41 Exp: Exp AND . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 99


State 81

   42 Exp: Exp OR . Exp

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 100


State 82

   53 Exp: Exp LB . Exp RB

    INT    shift, and go to state 46
    FLOAT  shift, and go to state 47
    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NOT    shift, and go to state 50
    LP     shift, and go to state 51

    Exp  转到状态 101


State 83

   39 Dec: VarDec ASSIGNOP Exp .
   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   53    | Exp . LB Exp RB

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    LB        shift, and go to state 82

    $default  reduce using rule 39 (Dec)


State 84

   37 DecList: Dec COMMA DecList .

    $default  reduce using rule 37 (DecList)


State 85

   54 Exp: ID DOT ID .

    $default  reduce using rule 54 (Exp)


State 86

   52 Exp: ID LP RP .

    $default  reduce using rule 52 (Exp)


State 87

   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   53    | Exp . LB Exp RB
   58 Args: Exp . COMMA Args
   59     | Exp .

    COMMA     shift, and go to state 102
    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    LB        shift, and go to state 82

    $default  reduce using rule 59 (Args)


State 88

   51 Exp: ID LP Args . RP

    RP  shift, and go to state 103


State 89

   48 Exp: LP Exp RP .

    $default  reduce using rule 48 (Exp)


State 90

   29 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 91

   30 Stmt: IF LP Exp . RP Stmt
   31     | IF LP Exp . RP Stmt ELSE Stmt
   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   53    | Exp . LB Exp RB

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    RP        shift, and go to state 104
    LB        shift, and go to state 82


State 92

   32 Stmt: WHILE LP Exp . RP Stmt
   40 Exp: Exp . ASSIGNOP Exp
   41    | Exp . AND Exp
   42    | Exp . OR Exp
   43    | Exp . RELOP Exp
   44    | Exp . PLUS Exp
   45    | Exp . MINUS Exp
   46    | Exp . STAR Exp
   47    | Exp . DIV Exp
   53    | Exp . LB Exp RB

    ASSIGNOP  shift, and go to state 74
    RELOP     shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    AND       shift, and go to state 80
    OR        shift, and go to state 81
    RP        shift, and go to state 105
    LB        shift, and go to state 82


State 93
